# tsl-satisfiability-modulo-theories

./: .gitignore  LICENSE  Makefile  README.md  benchmark.sh  stack.yaml  tsl-sat.cabal
benchmarks/fuzzed/: randD10_1.tsl  randD10_10.tsl  randD10_11.tsl  randD10_12.tsl  randD10_13.tsl  randD10_14.tsl  randD10_15.tsl  randD10_16.tsl  randD10_17.tsl  randD10_18.tsl  randD10_19.tsl  randD10_2.tsl  randD10_20.tsl  randD10_21.tsl  randD10_22.tsl  randD10_23.tsl  randD10_24.tsl  randD10_25.tsl  randD10_26.tsl  randD10_27.tsl  randD10_28.tsl  randD10_29.tsl  randD10_3.tsl  randD10_30.tsl  randD10_4.tsl  randD10_5.tsl  randD10_6.tsl  randD10_7.tsl  randD10_8.tsl  randD10_9.tsl  randD15_1.tsl  randD15_10.tsl  randD15_11.tsl  randD15_12.tsl  randD15_13.tsl  randD15_14.tsl  randD15_15.tsl  randD15_16.tsl  randD15_17.tsl  randD15_18.tsl  (+519 more)
benchmarks/scalability/: sat_scalability_01.tsl  sat_scalability_02.tsl  sat_scalability_03.tsl  sat_scalability_04.tsl  sat_scalability_05.tsl  sat_scalability_06.tsl  sat_scalability_07.tsl  sat_scalability_08.tsl  sat_scalability_09.tsl  sat_scalability_10.tsl  sat_scalability_11.tsl  sat_scalability_12.tsl  sat_scalability_13.tsl  sat_scalability_14.tsl  sat_scalability_15.tsl  unsat_scalability_1.tsl  unsat_scalability_2.tsl  unsat_scalability_3.tsl  unsat_scalability_4.tsl  unsat_scalability_5.tsl  unsat_scalability_6.tsl  unsat_scalability_7.tsl  unsat_scalability_8.tsl  unsat_scalability_9.tsl
benchmarks/story/: CexChain.tsl  CexHoldingArbiter.tsl  CexHoldingArbiterSmall.tsl  ProofApproximatePassThroughArbiter.tsl  ProofFilter.tsl  ProofGamemodechooserAssumptions.tsl  ProofInductiveAssumption.tsl  ProofInjector.tsl  ProofInvariantHolding.tsl  ProofOneOfThree.tsl  ProofOneOfTwo.tsl  ProofPassThroughArbiter.tsl  ProofScheduler.tsl
benchmarks/syntroids/: EnemeyModule.tsl  Gamelogic.tsl  Gamemodule.tsl  LedMatrix.tsl  Scoreboard.tsl  Sensor.tsl  SensorInit.tsl  (+2 more)
results/: fuzzed.csv  scalability.csv  story.csv  syntroids.csv  tests.csv
(+37 files in other folders)
