name:                tsl-sat
version:             1.0.0.0
license:             AGPL
license-file:        LICENSE
author:              Philippe Heim <heim@react.uni-saarland.de>
maintainer:          Philippe Heim <heim@react.uni-saarland.de>
build-type:          Simple
cabal-version:       >=1.10

library

  ghc-options:
    -Wall -Wno-name-shadowing -fno-ignore-asserts

  build-depends:
      base >=4.7 && <4.13
    , directory == 1.3.3.0
    , containers >=0.5 && <0.7
    , parallel-io == 0.3.3
    , process
    , tsl
    , syfco

  exposed-modules:
      ExternalCall
    , TSLSat
  
  other-modules:
      Algorithm                                                                                                             
    , BuechiStreamAutomaton
    , Excludor
    , FindFirstConcurrent
    , SMTQuery
    , Terms
    , TSLToBSA
 

  hs-source-dirs:
      src/lib
  
  default-language:
    Haskell2010


executable tsl2bsa
  
  main-is:
    Main.hs

  ghc-options:
    -Wall -Wno-name-shadowing -O2 -optc-O3 -threaded -with-rtsopts=-N2

  build-depends:
      base >=4.7 && <4.13
    , process
    , tsl
    , tsl-sat
    , directory

  hs-source-dirs:
     src/tools/tsl2bsa

  default-language:
    Haskell2010


executable tslsat

  main-is:
    Main.hs

  ghc-options:
    -Wall -Wno-name-shadowing -O2 -optc-O3 -threaded -with-rtsopts=-N2

  build-depends:
      base >=4.7 && <4.13
    , process
    , tsl
    , tsl-sat
    , directory

  hs-source-dirs:
     src/tools/tslsat 

  default-language:
    Haskell2010

executable tslfuzz

  main-is:
    Main.hs

  ghc-options:
    -Wall -Wno-name-shadowing -O2 -optc-O3 -threaded

  build-depends:
      base >=4.7 && <4.13
    , random == 1.1
    , directory == 1.3.3.0
    , containers >=0.5 && <0.7
    , process
    , tsl-sat

  hs-source-dirs:
      src/tools/tslfuzz

  default-language:
    Haskell2010
